# src/routes/bookmarks.routes.ts
@@ -1,6 +1,10 @@
 import express from 'express'
-import { BookmarkTweetController, UnBookmarkTweetController } from '~/controllers/bookmarks.controllers'
-import { Tweet_IdValidator } from '~/middlewares/tweets.middleware'
+import {
+  BookmarkTweetController,
+  UnBookmarkTweetController,
+  getBookmarkedTweetController
+} from '~/controllers/bookmarks.controllers'
+import { PaginationValidator, Tweet_IdValidator } from '~/middlewares/tweets.middleware'
 import { accessTokenValidator, verifyUserValidator } from '~/middlewares/users.middlewares'
 import { wrapController } from '~/utils/handler'
 const bookmarkRouter = express.Router()
@@ -27,5 +31,11 @@ bookmarkRouter.delete(
  * headers : { Authorization: Bearer <access_token> }
  */
 // NOTE : co the unbookmark bang bookmark_id thay vi tweet_id nhu tren
-
+bookmarkRouter.get(
+  '/List',
+  PaginationValidator,
+  accessTokenValidator,
+  verifyUserValidator,
+  wrapController(getBookmarkedTweetController)
+)
 export default bookmarkRouter
