# src/routes/likes.routes.ts
@@ -1,6 +1,6 @@
 import express from 'express'
-import { UnlikeTweetController, likeTweetController } from '~/controllers/likes.controllers'
-import { Tweet_IdValidator } from '~/middlewares/tweets.middleware'
+import { UnlikeTweetController, getLikedTweetController, likeTweetController } from '~/controllers/likes.controllers'
+import { PaginationValidator, Tweet_IdValidator } from '~/middlewares/tweets.middleware'
 import { accessTokenValidator, verifyUserValidator } from '~/middlewares/users.middlewares'
 import { wrapController } from '~/utils/handler'
 const likeRouter = express.Router()
@@ -27,5 +27,12 @@ likeRouter.delete(
  * headers : { Authorization: Bearer <access_token> }
  */
 // NOTE : co the unlike bang like_id thay vi tweet_id nhu tren
+likeRouter.get(
+  '/List',
+  PaginationValidator,
+  accessTokenValidator,
+  verifyUserValidator,
+  wrapController(getLikedTweetController)
+)
 
 export default likeRouter
